--- a/src/pages/photos/photos.html
+++ b/src/pages/photos/photos.html
@@ -10,7 +10,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="page">
   <img *ngIf="imageUrl" [src]="imageUrl">
   <div text-center>
     <button ion-button round icon-only (click)="onPicture()">
