--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -18,7 +18,7 @@
         <img src="/assets/imgs/gon.jpg" alt="">
       </ion-col>
       <ion-col size="9">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque suscipit eu tortor hendrerit porttitor. Proin iaculis sem quis ultrices fringilla. Duis non gravida orci. Nam pellentesque tellus ac mi tincidunt bibendum. Praesent nec urna neque. Duis sed metus tincidunt, consectetur nisl nec, scelerisque erat. </p>
+        <p>Nom: LAUER <br /> Prenom: Quentin <br /> Age: 21 ans <br /> Profession: Etudiant </p>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -27,7 +27,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque suscipit eu tortor hendrerit porttitor. Proin iaculis sem quis ultrices fringilla. Duis non gravida orci. Nam pellentesque tellus ac mi tincidunt bibendum. Praesent nec urna neque. Duis sed metus tincidunt, consectetur nisl nec, scelerisque erat. Quisque gravida ligula a placerat interdum. Proin ultrices mi non augue iaculis, nec consequat nunc feugiat. Pellentesque nec est vestibulum, imperdiet est vitae, euismod sapien. Suspendisse gravida arcu nulla, eu iaculis massa dictum a. Suspendisse in euismod purus, a eleifend felis.</p>
+      <p>Etudiant en licence professionnelle "Développeur web et mobile pour le commerce électronique". <br /> Je possède également ma licence de Hunter</p>
     </ion-row>
   </ion-grid>
 </ion-content>
